Refs #139198 - Horizontal card - fix spacing.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -343,7 +343,6 @@ div#page-document {
 
       width: 100%;
       padding-bottom: 5px;
-      border-bottom: 1px solid @s-medium-gray;
       margin-top: 5px;
       clear: both;
 
@@ -547,12 +546,13 @@ div.ui.modal {
 @media only screen and (min-width: 600px) {
   div.search-result {
     div.col-left {
-      padding-right: 3em;
+      padding-right: 2em;
     }
 
     div.col-right {
       img {
         padding-right: 0px !important;
+        margin-top: 10px;
       }
     }
   }
